test/fails/bad_generics/core1.lgl
int id_int(int x) {
    return x;
}

`t restrict<`t>(`t x) {
    return id_int(x);  // Must be an int!
}

void main() {
    bool fail = id_int<bool>(true);
}